# flask-template

./: .flaskenv  pyproject.toml  requirements.txt
src/flask_template/: app.py  config.py  db.py
src/flask_template/api/: __init__.py  base.py  item.py  user.py
src/flask_template/models/: __init__.py  item.py  user.py
