[tool.poetry]
name = "flask-template"
version = "0.1.0"
description = ""
authors = ["Brian Ko <briankosw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
SQLAlchemy = "^1.4.35"
python-dotenv = "^0.20.0"
waitress = "^2.1.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
